editted who population

--- a/who_population.ipynb
+++ b/who_population.ipynb
@@ -85,6 +85,72 @@
     "\n",
     "print(pop.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              WHO Country Name ISO3     Indicator Name         2000  \\\n",
+      "0                        Aruba  ABW  Population, total      89101.0   \n",
+      "1  Africa Eastern and Southern  AFE  Population, total  401600588.0   \n",
+      "2                  Afghanistan  AFG  Population, total   19542982.0   \n",
+      "3   Africa Western and Central  AFW  Population, total  269611898.0   \n",
+      "4                       Angola  AGO  Population, total   16394062.0   \n",
+      "\n",
+      "          2001         2002         2003         2004         2005  \\\n",
+      "0      90691.0      91781.0      92701.0      93540.0      94483.0   \n",
+      "1  412001885.0  422741118.0  433807484.0  445281555.0  457153837.0   \n",
+      "2   19688632.0   21000256.0   22645130.0   23553551.0   24411191.0   \n",
+      "3  277160097.0  284952322.0  292977949.0  301265247.0  309824829.0   \n",
+      "4   16941587.0   17516139.0   18124342.0   18771125.0   19450959.0   \n",
+      "\n",
+      "          2006  ...         2013         2014         2015         2016  \\\n",
+      "0      95606.0  ...     102880.0     103594.0     104257.0     104874.0   \n",
+      "1  469508516.0  ...  567892149.0  583651101.0  600008424.0  616377605.0   \n",
+      "2   25442944.0  ...   31541209.0   32716210.0   33753499.0   34636207.0   \n",
+      "3  318601484.0  ...  387204553.0  397855507.0  408690375.0  419778384.0   \n",
+      "4   20162340.0  ...   26147002.0   27128337.0   28127721.0   29154746.0   \n",
+      "\n",
+      "          2017         2018         2019         2020         2021  \\\n",
+      "0     105439.0     105962.0     106442.0     106585.0     106537.0   \n",
+      "1  632746570.0  649757148.0  667242986.0  685112979.0  702977106.0   \n",
+      "2   35643418.0   36686784.0   37769499.0   38972230.0   40099462.0   \n",
+      "3  431138704.0  442646825.0  454306063.0  466189102.0  478185907.0   \n",
+      "4   30208628.0   31273533.0   32353588.0   33428486.0   34503774.0   \n",
+      "\n",
+      "          2022  \n",
+      "0     106445.0  \n",
+      "1  720839314.0  \n",
+      "2   41128771.0  \n",
+      "3  490330870.0  \n",
+      "4   35588987.0  \n",
+      "\n",
+      "[5 rows x 26 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "update_colnames = {'Country Name': 'WHO Country Name', \n",
+    "                 'Country Code': 'ISO3',\n",
+    "}\n",
+    "pop.rename(columns=update_colnames, inplace=True)\n",
+    "\n",
+    "print(pop.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop.to_csv('who_population.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
