editting who population transposing

--- a/who_population.ipynb
+++ b/who_population.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop = pop.melt(id_vars=[\"WHO Country Name\", \"ISO3\", \"Indicator Name\"],   \n",
+    "                                    var_name=\"Year\", value_name=\"Value\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     WHO Country Name ISO3     Indicator Name  Year       Value\n",
+      "6113           Kosovo  XKX  Population, total  2022   1761985.0\n",
+      "6114      Yemen, Rep.  YEM  Population, total  2022  33696614.0\n",
+      "6115     South Africa  ZAF  Population, total  2022  59893885.0\n",
+      "6116           Zambia  ZMB  Population, total  2022  20017675.0\n",
+      "6117         Zimbabwe  ZWE  Population, total  2022  16320537.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pop.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
