--- a/dataclean.ipynb
+++ b/dataclean.ipynb
@@ -997,11 +997,454 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_df.to_csv('data_final.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_no2 = df.groupby(['WHO Country Name', 'Measurement Year'])['NO2 (μg/m3)'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WHO Country Name  Measurement Year\n",
+       "Albania           2015                23.960000\n",
+       "                  2016                26.260000\n",
+       "Andorra           2012                31.640000\n",
+       "                  2014                27.620000\n",
+       "                  2015                26.650000\n",
+       "                                        ...    \n",
+       "United Kingdom    2015                22.544416\n",
+       "                  2016                25.936757\n",
+       "                  2017                23.060341\n",
+       "                  2018                21.817941\n",
+       "                  2019                21.842041\n",
+       "Name: NO2 (μg/m3), Length: 347, dtype: float64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_no2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_no2_df = average_no2.reset_index()\n",
+    "average_no2_df = average_no2_df.rename(columns={'NO2 (μg/m3)': 'Average NO2'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WHO Country Name</th>\n",
+       "      <th>Measurement Year</th>\n",
+       "      <th>Average NO2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>23.960000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>26.260000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>31.640000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>27.620000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>26.650000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>22.544416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>25.936757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>23.060341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>21.817941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>21.842041</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>347 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    WHO Country Name  Measurement Year  Average NO2\n",
+       "0            Albania              2015    23.960000\n",
+       "1            Albania              2016    26.260000\n",
+       "2            Andorra              2012    31.640000\n",
+       "3            Andorra              2014    27.620000\n",
+       "4            Andorra              2015    26.650000\n",
+       "..               ...               ...          ...\n",
+       "342   United Kingdom              2015    22.544416\n",
+       "343   United Kingdom              2016    25.936757\n",
+       "344   United Kingdom              2017    23.060341\n",
+       "345   United Kingdom              2018    21.817941\n",
+       "346   United Kingdom              2019    21.842041\n",
+       "\n",
+       "[347 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_no2_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = pd.merge(df, average_no2_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WHO Region</th>\n",
+       "      <th>ISO3</th>\n",
+       "      <th>WHO Country Name</th>\n",
+       "      <th>City or Locality</th>\n",
+       "      <th>Measurement Year</th>\n",
+       "      <th>NO2 (μg/m3)</th>\n",
+       "      <th>NO2 temporal coverage (%)</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Average NO2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>European Region</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Elbasan</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>23.96</td>\n",
+       "      <td>97.853881</td>\n",
+       "      <td>2880703.0</td>\n",
+       "      <td>23.960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>European Region</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Elbasan</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>26.26</td>\n",
+       "      <td>96.049636</td>\n",
+       "      <td>2876101.0</td>\n",
+       "      <td>26.260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>European Region</td>\n",
+       "      <td>AND</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>Escaldes-Engordany</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>31.64</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>71013.0</td>\n",
+       "      <td>31.640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>European Region</td>\n",
+       "      <td>AND</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>Escaldes-Engordany</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>27.62</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>71621.0</td>\n",
+       "      <td>27.620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>European Region</td>\n",
+       "      <td>AND</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>Escaldes-Engordany</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>26.65</td>\n",
+       "      <td>94.554795</td>\n",
+       "      <td>71746.0</td>\n",
+       "      <td>26.650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16387</th>\n",
+       "      <td>South East Asia Region</td>\n",
+       "      <td>THA</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>Rayong</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>21.00</td>\n",
+       "      <td>90.400000</td>\n",
+       "      <td>71307763.0</td>\n",
+       "      <td>18.828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16388</th>\n",
+       "      <td>South East Asia Region</td>\n",
+       "      <td>THA</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>Samut Sakhon</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>35.50</td>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>71307763.0</td>\n",
+       "      <td>18.828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16389</th>\n",
+       "      <td>South East Asia Region</td>\n",
+       "      <td>THA</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>Saraburi</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>32.00</td>\n",
+       "      <td>92.000000</td>\n",
+       "      <td>71307763.0</td>\n",
+       "      <td>18.828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16390</th>\n",
+       "      <td>South East Asia Region</td>\n",
+       "      <td>THA</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>Satun</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>71307763.0</td>\n",
+       "      <td>18.828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16391</th>\n",
+       "      <td>South East Asia Region</td>\n",
+       "      <td>THA</td>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>Tak</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>11.00</td>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>71307763.0</td>\n",
+       "      <td>18.828</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16392 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   WHO Region ISO3 WHO Country Name    City or Locality  \\\n",
+       "0             European Region  ALB          Albania             Elbasan   \n",
+       "1             European Region  ALB          Albania             Elbasan   \n",
+       "2             European Region  AND          Andorra  Escaldes-Engordany   \n",
+       "3             European Region  AND          Andorra  Escaldes-Engordany   \n",
+       "4             European Region  AND          Andorra  Escaldes-Engordany   \n",
+       "...                       ...  ...              ...                 ...   \n",
+       "16387  South East Asia Region  THA         Thailand              Rayong   \n",
+       "16388  South East Asia Region  THA         Thailand        Samut Sakhon   \n",
+       "16389  South East Asia Region  THA         Thailand            Saraburi   \n",
+       "16390  South East Asia Region  THA         Thailand               Satun   \n",
+       "16391  South East Asia Region  THA         Thailand                 Tak   \n",
+       "\n",
+       "       Measurement Year  NO2 (μg/m3)  NO2 temporal coverage (%)  Population  \\\n",
+       "0                  2015        23.96                  97.853881   2880703.0   \n",
+       "1                  2016        26.26                  96.049636   2876101.0   \n",
+       "2                  2012        31.64                 100.000000     71013.0   \n",
+       "3                  2014        27.62                 100.000000     71621.0   \n",
+       "4                  2015        26.65                  94.554795     71746.0   \n",
+       "...                 ...          ...                        ...         ...   \n",
+       "16387              2019        21.00                  90.400000  71307763.0   \n",
+       "16388              2019        35.50                  93.000000  71307763.0   \n",
+       "16389              2019        32.00                  92.000000  71307763.0   \n",
+       "16390              2019         6.00                  95.000000  71307763.0   \n",
+       "16391              2019        11.00                  93.000000  71307763.0   \n",
+       "\n",
+       "       Average NO2  \n",
+       "0           23.960  \n",
+       "1           26.260  \n",
+       "2           31.640  \n",
+       "3           27.620  \n",
+       "4           26.650  \n",
+       "...            ...  \n",
+       "16387       18.828  \n",
+       "16388       18.828  \n",
+       "16389       18.828  \n",
+       "16390       18.828  \n",
+       "16391       18.828  \n",
+       "\n",
+       "[16392 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data_final.csv')"
    ]
   }
  ],
