Cleaned the DF, removed all na values

--- a/dataclean.ipynb
+++ b/dataclean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "max                   100.000000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "[16857 rows x 7 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "['WHO Country Name', 'ISO3', 'Measurement Year', 'Population']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "4                       Angola  AGO              2000   16394062.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
        "[16392 rows x 8 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +997,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1042,10 +1051,10 @@
        "                  2017                23.060341\n",
        "                  2018                21.817941\n",
        "                  2019                21.842041\n",
-       "Name: NO2 (μg/m3), Length: 347, dtype: float64"
+       "Name: NO2 (μg/m3), Length: 344, dtype: float64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1133,38 +1142,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>342</th>\n",
+       "      <th>339</th>\n",
        "      <td>United Kingdom</td>\n",
        "      <td>2015</td>\n",
        "      <td>22.544416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>343</th>\n",
+       "      <th>340</th>\n",
        "      <td>United Kingdom</td>\n",
        "      <td>2016</td>\n",
        "      <td>25.936757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>344</th>\n",
+       "      <th>341</th>\n",
        "      <td>United Kingdom</td>\n",
        "      <td>2017</td>\n",
        "      <td>23.060341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>345</th>\n",
+       "      <th>342</th>\n",
        "      <td>United Kingdom</td>\n",
        "      <td>2018</td>\n",
        "      <td>21.817941</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>346</th>\n",
+       "      <th>343</th>\n",
        "      <td>United Kingdom</td>\n",
        "      <td>2019</td>\n",
        "      <td>21.842041</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>347 rows × 3 columns</p>\n",
+       "<p>344 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1175,16 +1184,16 @@
        "3            Andorra              2014    27.620000\n",
        "4            Andorra              2015    26.650000\n",
        "..               ...               ...          ...\n",
-       "342   United Kingdom              2015    22.544416\n",
-       "343   United Kingdom              2016    25.936757\n",
-       "344   United Kingdom              2017    23.060341\n",
-       "345   United Kingdom              2018    21.817941\n",
-       "346   United Kingdom              2019    21.842041\n",
+       "339   United Kingdom              2015    22.544416\n",
+       "340   United Kingdom              2016    25.936757\n",
+       "341   United Kingdom              2017    23.060341\n",
+       "342   United Kingdom              2018    21.817941\n",
+       "343   United Kingdom              2019    21.842041\n",
        "\n",
-       "[347 rows x 3 columns]"
+       "[344 rows x 3 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1322,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16387</th>\n",
+       "      <th>16359</th>\n",
        "      <td>South East Asia Region</td>\n",
        "      <td>THA</td>\n",
        "      <td>Thailand</td>\n",
@@ -1325,7 +1334,7 @@
        "      <td>18.828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16388</th>\n",
+       "      <th>16360</th>\n",
        "      <td>South East Asia Region</td>\n",
        "      <td>THA</td>\n",
        "      <td>Thailand</td>\n",
@@ -1337,7 +1346,7 @@
        "      <td>18.828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16389</th>\n",
+       "      <th>16361</th>\n",
        "      <td>South East Asia Region</td>\n",
        "      <td>THA</td>\n",
        "      <td>Thailand</td>\n",
@@ -1349,7 +1358,7 @@
        "      <td>18.828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16390</th>\n",
+       "      <th>16362</th>\n",
        "      <td>South East Asia Region</td>\n",
        "      <td>THA</td>\n",
        "      <td>Thailand</td>\n",
@@ -1361,7 +1370,7 @@
        "      <td>18.828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16391</th>\n",
+       "      <th>16363</th>\n",
        "      <td>South East Asia Region</td>\n",
        "      <td>THA</td>\n",
        "      <td>Thailand</td>\n",
@@ -1374,7 +1383,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>16392 rows × 9 columns</p>\n",
+       "<p>16364 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1385,11 +1394,11 @@
        "3             European Region  AND          Andorra  Escaldes-Engordany   \n",
        "4             European Region  AND          Andorra  Escaldes-Engordany   \n",
        "...                       ...  ...              ...                 ...   \n",
-       "16387  South East Asia Region  THA         Thailand              Rayong   \n",
-       "16388  South East Asia Region  THA         Thailand        Samut Sakhon   \n",
-       "16389  South East Asia Region  THA         Thailand            Saraburi   \n",
-       "16390  South East Asia Region  THA         Thailand               Satun   \n",
-       "16391  South East Asia Region  THA         Thailand                 Tak   \n",
+       "16359  South East Asia Region  THA         Thailand              Rayong   \n",
+       "16360  South East Asia Region  THA         Thailand        Samut Sakhon   \n",
+       "16361  South East Asia Region  THA         Thailand            Saraburi   \n",
+       "16362  South East Asia Region  THA         Thailand               Satun   \n",
+       "16363  South East Asia Region  THA         Thailand                 Tak   \n",
        "\n",
        "       Measurement Year  NO2 (μg/m3)  NO2 temporal coverage (%)  Population  \\\n",
        "0                  2015        23.96                  97.853881   2880703.0   \n",
@@ -1398,11 +1407,11 @@
        "3                  2014        27.62                 100.000000     71621.0   \n",
        "4                  2015        26.65                  94.554795     71746.0   \n",
        "...                 ...          ...                        ...         ...   \n",
-       "16387              2019        21.00                  90.400000  71307763.0   \n",
-       "16388              2019        35.50                  93.000000  71307763.0   \n",
-       "16389              2019        32.00                  92.000000  71307763.0   \n",
-       "16390              2019         6.00                  95.000000  71307763.0   \n",
-       "16391              2019        11.00                  93.000000  71307763.0   \n",
+       "16359              2019        21.00                  90.400000  71307763.0   \n",
+       "16360              2019        35.50                  93.000000  71307763.0   \n",
+       "16361              2019        32.00                  92.000000  71307763.0   \n",
+       "16362              2019         6.00                  95.000000  71307763.0   \n",
+       "16363              2019        11.00                  93.000000  71307763.0   \n",
        "\n",
        "       Average NO2  \n",
        "0           23.960  \n",
@@ -1411,16 +1420,16 @@
        "3           27.620  \n",
        "4           26.650  \n",
        "...            ...  \n",
-       "16387       18.828  \n",
-       "16388       18.828  \n",
-       "16389       18.828  \n",
-       "16390       18.828  \n",
-       "16391       18.828  \n",
+       "16359       18.828  \n",
+       "16360       18.828  \n",
+       "16361       18.828  \n",
+       "16362       18.828  \n",
+       "16363       18.828  \n",
        "\n",
-       "[16392 rows x 9 columns]"
+       "[16364 rows x 9 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
