Added NO2 average by region

--- a/dataclean.ipynb
+++ b/dataclean.ipynb
@@ -1440,9 +1440,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df = merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data_final.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_no2 = df.groupby(['WHO Region', 'Measurement Year'])['NO2 (μg/m3)'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WHO Region                    Measurement Year\n",
+       "Eastern Mediterranean Region  2015                56.428000\n",
+       "                              2016                51.824000\n",
+       "                              2017                34.292000\n",
+       "                              2018                26.060000\n",
+       "                              2019                28.931429\n",
+       "                              2020                27.036667\n",
+       "                              2021                30.000000\n",
+       "European Region               2010                23.305685\n",
+       "                              2011                 7.160000\n",
+       "                              2012                31.640000\n",
+       "                              2013                21.890985\n",
+       "                              2014                20.582532\n",
+       "                              2015                20.388404\n",
+       "                              2016                20.203606\n",
+       "                              2017                20.056994\n",
+       "                              2018                18.985916\n",
+       "                              2019                18.026111\n",
+       "Region of the Americas        2010                30.374000\n",
+       "                              2011                26.947143\n",
+       "                              2012                22.780000\n",
+       "                              2013                23.780833\n",
+       "                              2014                26.358000\n",
+       "                              2015                12.541043\n",
+       "                              2016                11.132097\n",
+       "                              2017                11.515873\n",
+       "                              2018                15.652469\n",
+       "                              2019                12.074464\n",
+       "South East Asia Region        2010                18.850000\n",
+       "                              2011                19.349362\n",
+       "                              2012                21.285888\n",
+       "                              2013                19.167438\n",
+       "                              2014                21.587754\n",
+       "                              2015                12.964000\n",
+       "                              2016                22.475692\n",
+       "                              2017                22.628343\n",
+       "                              2018                23.352888\n",
+       "                              2019                23.530455\n",
+       "Western Pacific Region        2010                23.000000\n",
+       "                              2011                25.000000\n",
+       "                              2012                16.000000\n",
+       "                              2013                15.226667\n",
+       "                              2014                24.618333\n",
+       "                              2015                10.160000\n",
+       "                              2016                11.085714\n",
+       "                              2017                25.000000\n",
+       "                              2018                19.152941\n",
+       "                              2019                10.072500\n",
+       "                              2020                20.000000\n",
+       "Name: NO2 (μg/m3), dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_no2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_no2_df = average_no2.reset_index()\n",
+    "average_no2_df = average_no2_df.rename(columns={'NO2 (μg/m3)': 'Average NO2 Region'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = pd.merge(df, average_no2_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WHO Region</th>\n",
+       "      <th>ISO3</th>\n",
+       "      <th>WHO Country Name</th>\n",
+       "      <th>City or Locality</th>\n",
+       "      <th>Measurement Year</th>\n",
+       "      <th>NO2 (μg/m3)</th>\n",
+       "      <th>NO2 temporal coverage (%)</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Average NO2</th>\n",
+       "      <th>Average NO2 Region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>European Region</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Elbasan</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>23.96</td>\n",
+       "      <td>97.853881</td>\n",
+       "      <td>2880703.0</td>\n",
+       "      <td>23.960000</td>\n",
+       "      <td>20.388404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>European Region</td>\n",
+       "      <td>AND</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>Escaldes-Engordany</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>26.65</td>\n",
+       "      <td>94.554795</td>\n",
+       "      <td>71746.0</td>\n",
+       "      <td>26.650000</td>\n",
+       "      <td>20.388404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>European Region</td>\n",
+       "      <td>AUT</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>Am Rechen</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>17.43</td>\n",
+       "      <td>95.376712</td>\n",
+       "      <td>8642699.0</td>\n",
+       "      <td>20.736238</td>\n",
+       "      <td>20.388404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>European Region</td>\n",
+       "      <td>AUT</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>Amstetten</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>23.62</td>\n",
+       "      <td>95.433790</td>\n",
+       "      <td>8642699.0</td>\n",
+       "      <td>20.736238</td>\n",
+       "      <td>20.388404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>European Region</td>\n",
+       "      <td>AUT</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>Bad Vöslau</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>12.89</td>\n",
+       "      <td>94.668950</td>\n",
+       "      <td>8642699.0</td>\n",
+       "      <td>20.736238</td>\n",
+       "      <td>20.388404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16359</th>\n",
+       "      <td>Eastern Mediterranean Region</td>\n",
+       "      <td>QAT</td>\n",
+       "      <td>Qatar</td>\n",
+       "      <td>Doha</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>30.00</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>2688235.0</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16360</th>\n",
+       "      <td>Western Pacific Region</td>\n",
+       "      <td>SGP</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>5076732.0</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16361</th>\n",
+       "      <td>Western Pacific Region</td>\n",
+       "      <td>SGP</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>5183688.0</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16362</th>\n",
+       "      <td>Western Pacific Region</td>\n",
+       "      <td>SGP</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>5612253.0</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16363</th>\n",
+       "      <td>Western Pacific Region</td>\n",
+       "      <td>SGP</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>5685807.0</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16364 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         WHO Region ISO3 WHO Country Name    City or Locality  \\\n",
+       "0                   European Region  ALB          Albania             Elbasan   \n",
+       "1                   European Region  AND          Andorra  Escaldes-Engordany   \n",
+       "2                   European Region  AUT          Austria           Am Rechen   \n",
+       "3                   European Region  AUT          Austria           Amstetten   \n",
+       "4                   European Region  AUT          Austria          Bad Vöslau   \n",
+       "...                             ...  ...              ...                 ...   \n",
+       "16359  Eastern Mediterranean Region  QAT            Qatar                Doha   \n",
+       "16360        Western Pacific Region  SGP        Singapore           Singapore   \n",
+       "16361        Western Pacific Region  SGP        Singapore           Singapore   \n",
+       "16362        Western Pacific Region  SGP        Singapore           Singapore   \n",
+       "16363        Western Pacific Region  SGP        Singapore           Singapore   \n",
+       "\n",
+       "       Measurement Year  NO2 (μg/m3)  NO2 temporal coverage (%)  Population  \\\n",
+       "0                  2015        23.96                  97.853881   2880703.0   \n",
+       "1                  2015        26.65                  94.554795     71746.0   \n",
+       "2                  2015        17.43                  95.376712   8642699.0   \n",
+       "3                  2015        23.62                  95.433790   8642699.0   \n",
+       "4                  2015        12.89                  94.668950   8642699.0   \n",
+       "...                 ...          ...                        ...         ...   \n",
+       "16359              2021        30.00                  99.000000   2688235.0   \n",
+       "16360              2010        23.00                 100.000000   5076732.0   \n",
+       "16361              2011        25.00                 100.000000   5183688.0   \n",
+       "16362              2017        25.00                 100.000000   5612253.0   \n",
+       "16363              2020        20.00                 100.000000   5685807.0   \n",
+       "\n",
+       "       Average NO2  Average NO2 Region  \n",
+       "0        23.960000           20.388404  \n",
+       "1        26.650000           20.388404  \n",
+       "2        20.736238           20.388404  \n",
+       "3        20.736238           20.388404  \n",
+       "4        20.736238           20.388404  \n",
+       "...            ...                 ...  \n",
+       "16359    30.000000           30.000000  \n",
+       "16360    23.000000           23.000000  \n",
+       "16361    25.000000           25.000000  \n",
+       "16362    25.000000           25.000000  \n",
+       "16363    20.000000           20.000000  \n",
+       "\n",
+       "[16364 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = merged_df"
    ]
@@ -1453,7 +1798,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data_final.csv')"
+    "df.to_csv('data_final_v2.csv')"
    ]
   }
  ],
