--- a/who_population.ipynb
+++ b/who_population.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -145,40 +145,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "pop = pop.melt(id_vars=[\"WHO Country Name\", \"ISO3\", \"Indicator Name\"],   \n",
-    "                                    var_name=\"Year\", value_name=\"Value\")\n",
+    "                                    var_name=\"Measurement Year\", value_name=\"Population\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     WHO Country Name ISO3     Indicator Name  Year       Value\n",
-      "6113           Kosovo  XKX  Population, total  2022   1761985.0\n",
-      "6114      Yemen, Rep.  YEM  Population, total  2022  33696614.0\n",
-      "6115     South Africa  ZAF  Population, total  2022  59893885.0\n",
-      "6116           Zambia  ZMB  Population, total  2022  20017675.0\n",
-      "6117         Zimbabwe  ZWE  Population, total  2022  16320537.0\n"
+      "     WHO Country Name ISO3 Measurement Year  Population\n",
+      "6113           Kosovo  XKX             2022   1761985.0\n",
+      "6114      Yemen, Rep.  YEM             2022  33696614.0\n",
+      "6115     South Africa  ZAF             2022  59893885.0\n",
+      "6116           Zambia  ZMB             2022  20017675.0\n",
+      "6117         Zimbabwe  ZWE             2022  16320537.0\n"
      ]
     }
    ],
    "source": [
+    "pop = pop.drop([\"Indicator Name\"], axis=1)\n",
     "print(pop.tail())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
